Ajout de background color

--- a/client/src/components/CardArt.css
+++ b/client/src/components/CardArt.css
@@ -2,6 +2,7 @@ main {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  background-color: aqua;
 }
 .basquiatImg {
   width: 35vw;
