--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -4,26 +4,35 @@
   background-color: #00296b;
 }
 
+nav ul {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding-bottom: 1em;
+  padding-left: 1em;
+}
+
 nav ul li {
   list-style-type: none;
 }
 .button-54 {
   font-family: "Lucida Sans", sans-serif;
   background-color: #ffcd29;
-  font-size: 16px;
+  font-size: 14px;
   letter-spacing: 2px;
   text-decoration: none;
   text-transform: uppercase;
   color: #000;
   cursor: pointer;
   border: 3px solid;
-  padding: 0.25em 0.5em;
+  padding: 0.4em 0.25em 0.4em 0.25em;
   box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px,
     5px 5px 0px 0px;
   position: relative;
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
+  width: 8em;
 }
 
 .button-54:active {
