--- a/client/src/pages/Favoris.css
+++ b/client/src/pages/Favoris.css
@@ -4,8 +4,8 @@
 }
 
 .mainFavoris p {
-  text-align: justify;
-  font-size: x-large;
+  text-align: start;
+  font-size: large;
 }
 
 .CardArtFavorites {
