--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -1,13 +1,13 @@
-@import url("https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&display=swap"); */
 
-.color-header {
+/* .color-header {
   background-color: #00296b;
-}
+} */
 
 nav ul {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 0.8rem;
   padding-bottom: 1em;
   padding-left: 1em;
 }
@@ -15,24 +15,32 @@ nav ul {
 nav ul li {
   list-style-type: none;
 }
+
 .button-54 {
+  display: block;
   font-family: "Lucida Sans", sans-serif;
   background-color: #ffcd29;
-  font-size: 14px;
-  letter-spacing: 2px;
+  font-size: small;
+  letter-spacing: 1px;
   text-decoration: none;
   text-transform: uppercase;
   color: #000;
   cursor: pointer;
   border: 3px solid;
-  padding: 0.4em 0.25em 0.4em 0.25em;
-  box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px,
-    5px 5px 0px 0px;
-  position: relative;
+  padding: 0.2em 0.2em 0.2em 0.2em;
+  box-shadow: 1px 1px 0 0, 2px 2px 0 0, 3px 3px 0 0, 4px 4px 0 0, 5px 5px 0 0;
+
+  /* position: relative;
   user-select: none;
   -webkit-user-select: none;
-  touch-action: manipulation;
-  width: 10em;
+  touch-action: manipulation; */
+  width: 6.8em;
+}
+
+.button-54-active {
+  background-color: #2997fd;
+  color: #000000;
+  border-color: #000000;
 }
 
 .button-54:active {
@@ -41,8 +49,8 @@ nav ul li {
   left: 5px;
 }
 
-@media (min-width: 768px) {
+/* @media (min-width: 768px) {
   .button-54 {
     padding: 0.25em 0.75em;
   }
-}
+} */
