--- a/client/src/components/CardArt.css
+++ b/client/src/components/CardArt.css
@@ -12,19 +12,26 @@
   max-height: 15em;
   box-sizing: border-box;
   margin: 0.5em;
+  justify-content: space-between;
+  overflow: hidden;
 }
 
 .cardArtImg {
   max-width: 100%;
   max-height: 70%;
+  flex: 1;
 }
 
 .imgTitle {
   font-size: small;
   text-align: center;
   font-family: monospace;
-  margin-top: auto;
   overflow: hidden;
+  margin: 0 !important;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  max-width: 100%;
+  flex-shrink: 0;
 }
 
 .likeButton {
@@ -32,6 +39,12 @@
   border: none;
   font-size: 1.5em;
   cursor: pointer;
+}
+
+.detailsButton {
+  border-radius: 0em;
+  background-color: #ffffff;
+  color: #000000;
 }
 
 #loading {
