--- a/client/src/pages/A_propos.css
+++ b/client/src/pages/A_propos.css
@@ -1,9 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap");
-
-@import url("https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Oswald:wght@200..700&display=swap");
-
 .mainAbout {
-  padding: 1em;
+  padding: 1em 3em 1em 3em;
 }
 
 .dreamTeamSection {
@@ -11,26 +7,31 @@
   flex-direction: column;
   align-items: center;
 }
-.dreamTeam {
+.dreamTeamImage {
   width: 70vw;
   margin-top: 1em;
   border-radius: 1em;
 }
 
 #titre-a-propos {
-  font-family: "Oswald", sans-serif;
-  font-size: xx-large;
+  font-family: monospace;
+  font-size: 1.8em;
 }
 #soustitre-apropos {
-  font-family: "Fira Sans", sans-serif;
-  font-weight: 400;
-  font-style: normal;
+  font-family: monospace;
+  font-size: 1.9em;
   padding-bottom: 0.3em;
-  padding-top: 0.5em;
+  padding-top: 1.5em;
 }
 #text {
-  font-family: "Fira Sans", sans-serif;
-  font-weight: 200;
-  font-style: normal;
+  font-family: monospace;
+  font-size: 1.3em;
   text-align: justify;
+  padding-bottom: 2em;
+}
+
+@media (min-width: 400px) {
+  .dreamTeamImage {
+    max-width: 35em;
+  }
 }
