--- a/client/src/pages/Favoris.css
+++ b/client/src/pages/Favoris.css
@@ -1,11 +1,8 @@
-.mainFavoris {
-  display: block;
-  padding: 1em;
-}
-
 .mainFavoris p {
+  padding: 1em;
   text-align: start;
   font-size: large;
+  font-family: monospace;
 }
 
 .CardArtFavorites {
