--- a/client/src/pages/HomePage.css
+++ b/client/src/pages/HomePage.css
@@ -1,8 +1,7 @@
 .searchcarcl {
   display: flex;
   flex-direction: row-reverse;
-  padding-top: 1em;
-  padding-right: 1em;
+  margin-top: 1em;
   justify-content: right;
   width: 100%;
   height: auto;
@@ -13,15 +12,35 @@
   padding: 0;
   display: flex;
   flex-wrap: wrap;
-  /*j'ai commenté ces lignes pour que ça ne force pas mon titre "Liked artworks:" à se mettre au millieu et ça ne change rien dans la structure globale*/
-  /* justify-content: center; */
-  /* align-items: center; */
-  /* flex-wrap: wrap; */
-  /* flex-direction: row-reverse; */
 }
 
 .cardart {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+}
+
+.compteur {
+  text-align: center;
+}
+
+.searchcarcl {
+  justify-content: center;
+  padding-right: 1.5em;
+}
+.cardart p {
+  font-size: x-large;
+  text-align: center;
+  font-family: monospace;
+}
+
+@media (min-width: 400px) {
+  .searchcarcl {
+    display: flex;
+    flex-direction: row-reverse;
+    margin-right: 1.5em;
+    justify-content: right;
+    width: 100%;
+    height: auto;
+  }
 }
